Fix: Fix styling behavior of save button where button collapses when in saved state

--- a/frontend/src/styles/FullPost.css
+++ b/frontend/src/styles/FullPost.css
@@ -61,7 +61,7 @@
     align-items: center;
     justify-content: flex-end;
     
-    width: 40%;
+    width: 45%;
 }
 
 .share-save-container button {
@@ -125,7 +125,7 @@
     width: auto;
 }
 
-.share-save-container .save-button {
+.share-save-container .save-button, .share-save-container .saved-button  {
     min-width: 4rem;
     padding: 10px;
     gap: 5px;
@@ -133,7 +133,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 45%;
+    min-width: 50%;
     height: 60%;
     box-sizing: border-box;
     background-color: #192233;
@@ -148,18 +148,9 @@
 }
 
 .share-save-container .saved-button {
-    padding: 10px;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    width: 20%;
-    height: 60%;
-    box-sizing: border-box;
+
     background-color: #008B8B;
-    border-radius: 0.5rem;
-    border: none;
-    margin: 0 1.25rem 0 -0.9375rem;
-    transition: all 0.2s ease-in-out;
+
 }
 
 .save-icon {
